unpackaged/main/default/objects/Demo_Scenario__c/Demo_Scenario__c.object-meta.xml
<CustomObject>
    <description>Demo scenarios store the name, description, and link(s) to various scenarios configured in the Fonteva Sales Demo environment.</description>
    <label>Demo Scenario</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>