unpackaged/main/default/objects/Demo_Scenario__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Select the most appropriate category related to the demo scenario.</description>
    <inlineHelpText>Select the most appropriate category related to the demo scenario.</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Accounts &amp; Contacts</fullName>
            </value>
            <value>
                <fullName>Reports &amp; Dashboards</fullName>
            </value>
            <value>
                <fullName>Form Builder</fullName>
            </value>
            <value>
                <fullName>Community Groups</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Certification &amp; Accreditation</fullName>
            </value>
            <value>
                <fullName>Workflows &amp; Approval Processes</fullName>
            </value>
            <value>
                <fullName>Custom Objects &amp; Fields</fullName>
            </value>
            <value>
                <fullName>User Profiles &amp; Permissions</fullName>
            </value>
            <value>
                <fullName>API/Integrations</fullName>
            </value>
            <value>
                <fullName>Partner App</fullName>
            </value>
            <value>
                <fullName>Fonteva Labs App</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>