unpackaged/main/default/objects/Demo_Scenario__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description>Select the persona related to the demo scenario.</description>
    <inlineHelpText>Select the persona(s) related to the demo scenario.</inlineHelpText>
    <label>Persona</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chapter President</fullName>
            </value>
            <value>
                <fullName>Committee/Group Manager</fullName>
            </value>
            <value>
                <fullName>Database Administrator &amp; Web Developer</fullName>
            </value>
            <value>
                <fullName>Director of Finance &amp; Administration</fullName>
            </value>
            <value>
                <fullName>Education/Certification Manager</fullName>
            </value>
            <value>
                <fullName>Events Manager</fullName>
            </value>
            <value>
                <fullName>Executive Director</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Communications Manager</fullName>
            </value>
            <value>
                <fullName>Member/Customer</fullName>
            </value>
            <value>
                <fullName>Membership Coordinator</fullName>
            </value>
            <value>
                <fullName>Prospective Member/Customer</fullName>
            </value>
            <value>
                <fullName>Publications/Advertising Manager</fullName>
            </value>
            <value>
                <fullName>Public Website Visitor</fullName>
            </value>
            <value>
                <fullName>Sales Manager (Sponsorships/Advertisements)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>