unpackaged/main/default/objects/Demo_Scenario__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Select the products related to the demo scenario.</description>
    <inlineHelpText>Select the products related to the demo scenario.</inlineHelpText>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fonteva</fullName>
                <default>true</default>
                <label>Fonteva</label>
            </value>
            <value>
                <fullName>Partner/Other</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>