unpackaged/main/default/objects/Demo_Scenario__c/fields/URL_1_Name__c.field-meta.xml
<CustomField>
    <fullName>URL_1_Name__c</fullName>
    <description>Name for the URL provided in the URL #1 field.</description>
    <inlineHelpText>Name for the URL provided in the URL #1 field.</inlineHelpText>
    <label>URL #1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>